Fixed timer display

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div class="game-interface">
                 <div class="flags-left"> <span>🚩</span></div>
                 <div class="reset"><a href="" class="reset-btn">😉</a></div>
-                <div class="timer">Time elapsed: <span class="timer-value">0</span> s</div>
+                <div class="timer">Time: <span class="timer-units"><span class="timer-value">0</span> s</span></div>
             </div>
             <div class="grid"></div>
         </div>
